--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  Welcome to Digital Art Library
   
-  Welcome to digital art library
-  
-  Art library
-  
-  goodluck champ
-  
+</body>
 </html>
