--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   Welcome to Digital Art Library
 
-  we outside chilling in Digital Library isheri osun
+  <p>we outside chilling in Digital Library isheri osun</p>
   
 </body>
 </html>
